syntax = "proto3";

package eservice;

message EServiceV2 {
  string id = 1;
  string producerId = 2;
  string name = 3;
  string description = 4;
  EServiceTechnologyV2 technology = 5;
  optional EServiceAttributesV2 attributes = 6;
  repeated EServiceDescriptorV2 descriptors = 7;
  optional int64 createdAt = 8;
}

message EServiceAttributeValueV2 {
  string id = 1;
  bool explicitAttributeVerification = 2;
}

message EServiceAttributeV2 {
  optional EServiceAttributeValueV2 single = 1;
  repeated EServiceAttributeValueV2 group = 2;
}

message EServiceAttributesV2 {
  repeated EServiceAttributeV2 certified = 1;
  repeated EServiceAttributeV2 declared = 2;
  repeated EServiceAttributeV2 verified = 3;
}

message EServiceDescriptorV2 {
  string id = 1;
  string version = 2;
  optional string description = 3;
  repeated EServiceDocumentV2 docs = 4;
  EServiceDescriptorStateV2 state = 5;
  optional EServiceDocumentV2 interface = 6;
  repeated string audience = 7;
  int32 voucherLifespan = 8;
  int32 dailyCallsPerConsumer = 9;
  int32 dailyCallsTotal = 10;
  optional AgreementApprovalPolicyV2 agreementApprovalPolicy = 11;
  optional int64 createdAt = 12;
  optional int64 publishedAt = 13;
  repeated string serverUrls = 14;
  optional int64 suspendedAt = 15;
  optional int64 deprecatedAt = 16;
  optional int64 archivedAt = 17;
  optional EServiceAttributesV2 attributes = 18;
}

message EServiceDocumentV2 {
  string id = 1;
  string name = 2;
  string contentType = 3;
  string path = 4;
  string checksum = 5;
  string uploadDate = 6;
  string prettyName = 7;
}

enum EServiceDescriptorStateV2 {
  DRAFT = 0;
  PUBLISHED = 1;
  DEPRECATED = 2;
  SUSPENDED = 3;
  ARCHIVED = 4;
}

enum EServiceTechnologyV2 {
  REST = 0;
  SOAP = 1;
}

enum AgreementApprovalPolicyV2 {
  AUTOMATIC = 0;
  MANUAL = 1;
}
